Implementação testes unitários usuário